Fixing vulnerabilities September 2023 (#16)
* Updating to latest python alpine 3.12
* Fixing up docker image to build on all branches

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -2,9 +2,8 @@ name: Docker Image CI
 
 on:
   push:
-    branches: [ "master" ]
-    tags:
-      - "*"
+    branches: [ "*" ]
+    tags: [ "*" ]
 
 jobs:
   build:
